# loki

./: Cargo.toml  TODO.md  build.rs  rustfmt.toml
examples/: benchmark_wgc.rs
src/: main.rs
src/capture_providers/: capture_provider.rs  mod.rs
src/capture_providers/shared/: capture_framerate.rs  frame.rs  mod.rs  rect.rs  vector2.rs
src/capture_providers/windows/: builder.rs  capture.rs  capture_provider.rs  capture_stream.rs  d3d11_utils.rs  error.rs  mod.rs  wgc_capture_provider.rs
src/ui/: app.rs  frame_viewer.rs  mod.rs
src/utils/: image_utils.rs  mod.rs  unsafe_send_wrapper.rs
