[package]
name = "loki"
description = "An extremely work-in-progress screen sharing application."
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
iced = { version = "0.13.1", features = ["tokio"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_System_WinRT_Direct3D11",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Capture",
    "Foundation",
    "System",
] }
windows-core = "0.62.2"
