[package]
name = "loki"
description = "An extremely work-in-progress screen sharing application."
version = "0.1.0"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
iced = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced", features = [
    "tokio",
    "image",
    "canvas",
    "advanced",
] }
iced_winit = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced" }
iced_core = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced" }
iced_debug = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced" }
iced_devtools = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced" }
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
once_cell = "1.19.0"
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_System_WinRT_Direct3D11",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Capture",
    "Foundation",
    "System",
] }
windows-core = "0.62.2"
bytes = "1.11.0"
